src/styles/reset.css
@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');


html {
    font-family: 'Roboto, sans-serif';
    line-height: unset;
}

*, *::after, *::before {
    box-sizing: inherit;
    font-family: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0;
}

div,
section,
aside,
footer,
header,
nav,
main,
p,
a {
    line-height: unset;
}

a {
    font-weight: inherit;
    color: inherit;
}

.mui-icon {
    width: 1.5rem;
    height: 1.5rem;
}
.mui-icon svg {
    width: 1.5rem;
    height: 1.5rem;
}

